# jampada

./: .gitignore  README.md
backend/: .env  .env.example  .poetry.lock.swp  pyproject.toml
backend/app/: default_settings.py  main.py
backend/app/api/v1/routes/: api.py  sports.py  topics.py  users.py
backend/app/core/: __init__.py  config.py  deps.py  rounding.py  security.py
backend/app/core/settings/: __init__.py  app.py  base.py  development.py  production.py  test.py
backend/app/models/: __init__.py  sports.py  topics.py  users.py
backend/app/schemas/: __init__.py  items.py  sports.py  tokens.py  topics.py  users.py
backend/scripts/: run-api  run-api-win.ps1
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/component/: Input.js  Login.js  Modal.js  Room.css  Room.js  Show.js
frontend/src/page/: Bad.js  Bball.js  Fball.js  Home.css  Home.js  Login.js  Navbar.css  Navbar.js  Pong.js  Register.js  Signin.js  Ten.js  Vball.js
frontend/src/redux/: store.js
frontend/src/redux/actions/: authAction.js  topicAction.js
frontend/src/redux/reducers/: authReducer.js  index.js  topicReducer.js
frontend/src/utils/: fetch.js
nginx/: nginx.conf
scripts/: run-backend.sh  run-frontend.sh
