[tool.poetry]
name = "jampada"
version = "0.1.0"
description = ""
authors = ["Surawut"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.91.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
jampada = "app.cmd.web:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
