[tool.poetry]
name = "jampada"
version = "0.1.0"
description = ""
authors = ["Surawut"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
pydantic = {extras = ["dotenv"], version = "^1.10.6"}
mongoengine = "^0.27.0"
passlib = "^1.7.4"
loguru = "^0.6.0"
python-jose = "^3.3.0"
authlib = "^1.2.0"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
